Big code cleaning